welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:23: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^PatternPicture:26: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^PatternPicture:29: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^PatternPicture:32: error: too many arguments for method gauche: ()Unit
	gauche(2)
              ^